# treeparse

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo.sh  demos.sh  design_brief.typ  future.md  pyproject.toml  pytest.ini  run.sh
.github/workflows/: ci.yml  publish.yml
docs/: help.tape
docs/superpowers/specs/: 2026-06-03-group-default-subcommand-design.md
examples/: all_themes_demo.py  basic.py  basic_super.py  chain_demo.py  choice_demo.py  demo.py  fix_chain_example.py  fix_group_option_example.py  flag_demo.py  github_theme_demo.py  group_arg_demo.py  group_arg_example.py  group_option_demo.py  group_option_example.py  list_demo.py  mesh_anba_example.py  monokai_theme_demo.py  optional_arg_demo.py  root_option_example.py  theme_demo.py  validation_error_demo.py
src/treeparse/: __init__.py  argument.py  chain.py  cli.py  color_config.py  command.py  group.py  models.py  option.py  testing.py
src/treeparse/core/: __init__.py  argument.py  chain.py  cli.py  command.py  group.py  option.py
src/treeparse/models/: __init__.py  argument.py  chain.py  cli.py  command.py  group.py  option.py
src/treeparse/utils/: __init__.py  color_config.py  help_renderer.py  helpers.py
tests/: test_argument.py  test_chain.py  test_cli.py  test_cli_default_command.py  test_cli_flags.py  test_cli_help.py  test_cli_parsing.py  test_cli_parsing_basic.py  test_cli_parsing_chains.py  test_cli_parsing_choices.py  test_cli_parsing_display.py  test_cli_parsing_flags.py  test_cli_parsing_groups.py  test_cli_runner.py  test_command.py  test_coverage_gaps.py  test_demo.py  test_demo_execution.py  test_demo_help.py  test_examples.py  test_group.py  test_help_snapshots.py  test_helpers.py  test_models.py  test_option.py
