[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{name = "wr1"}]
dependencies = [
  "rich>=13.3.1,<14",
  "pydantic>=2.0.2,<3",
  "pyyaml>=6.0,<7", # Added for YAML config support
]
description = "Intuitive CLI framework using argparse, rich, and pydantic"
name = "treeparse"
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.4"

[project.scripts]
basic = "examples.basic:main"
basic_super = "examples.basic_super:main"
chain_demo = "examples.chain_demo:main"
choice_demo = "examples.choice_demo:main"
demo = "examples.demo:main"
group_arg_demo = "examples.group_arg_demo:main"
group_arg_example = "examples.group_arg_example:main"
group_option_demo = "examples.group_option_demo:main"
group_option_example = "examples.group_option_example:main"
list_demo = "examples.list_demo:main"
root_option_example = "examples.root_option_example:main"
theme_demo = "examples.theme_demo:main"

[dependency-groups]
dev = [
  "pytest~=7.0",
  "pytest-cov~=4.0",
  "ruff>=0.0.260,<0.0.261",
]
