[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
packages = ["src/treeparse"]

[project]
authors = [{name = "wr1"}]
dependencies = [
  "rich>=13.3.1,<14",
  "pydantic>=2.0.2,<3",
  "pyyaml>=6.0,<7", # Added for YAML config support
]
description = "Intuitive CLI framework using argparse, rich, and pydantic"
name = "treeparse"
readme = "README.md"
requires-python = ">=3.8"
version = "0.2.6"

[project.scripts]
treeparse-demo = "treeparse.cli:main"

[project.optional-dependencies]
completions = ["shtab>=1.7.1"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
